--- a/Kalayaan,_Laguna.mw
+++ b/Kalayaan,_Laguna.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Kalayaan|
- sealfile     = |
- locatormapfile = Ph_locator_laguna kalayaan.png |
- caption      = Map of [[Laguna]] showing the location of Kalayaan. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 16 |
- class        = 3rd class |
- mayor        = Theodore Adao |
- founded      = [[1990]] |
- cityhood     = - |
- areakm2      = 46.600 |
- pop2000      = 20,944 |
- popden2000   = 4500 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalayaan, Laguna
 | 1990 = 13118		
@@ -34,10 +16,13 @@ Say '''[[Kalayaan]]''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
 
-Saray [[barangay]] no three: Longos, Santo Antônio tan San Juan
+Saray [[barangay]] no three: Longos, Santo Antônio tan San Juan.
 
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
