--- a/Liliw.mw
+++ b/Liliw.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Liliw<br>''Lungsod sa Lili-o''|
- sealfile     = |
- locatormapfile = Ph_locator_laguna_liliw.png |
- caption      = Map of [[Laguna]] showing the location of Liliw. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 3rd district of Laguna |
- barangays    = 52 |
- class        = 4th class |
- mayor        = Cesar C. Sulibit |
- founded      = 1583 |
- cityhood     = -|
- areakm2      = 39.10 |
- pop2000      = 33,851 |
- popden2000   = 870 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Liliw, Laguna
 | 1990 = 21911		
@@ -30,12 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Liliw''' ([[salitan Cebuano|Bisaya]]: ''Lili-o''; [[salitan Latino|Latin Boy]]: ''Lilio'') sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
+Say '''Liliw''' sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
 
 == Listaan na Barangay ==
 
 Say Liliw walay 33 ya [[barangay]]:
-
 
 <table border=0><tr>
 <td valign=top>
@@ -76,13 +57,16 @@ Say Liliw walay 33 ya [[barangay]]:
 * Tuy-Baanan
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Image==
 <gallery>
 Image:Church of Liliw, Facade.jpg|Facade of the Church of Liliw
 Image:Church of Liliw.jpg|[[Simbaan na Liliw|The Church of Liliw]]
 </gallery>
 
-{{philippines-geo-stub}}
 {{Laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
