--- a/Los_Baños.mw
+++ b/Los_Baños.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Los Baños |
- sealfile     = |
- locatormapfile = Ph_locator_laguna_los banos.png |
- caption      = Map of [[Laguna]] showing the location of Los Baños. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 2nd district of Laguna |
- barangays    = 14 |
- class        = premier class |
- mayor        = Cesar Perez |
- founded      = [[May 5]], [[1616]] |
- cityhood     = -
- areakm2      =  |
- pop2000      =  |
- popden2000   =  |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Los Baños, Laguna
@@ -32,7 +13,7 @@
 | 2030 = 		
 |}}
 
-Say '''Los Baños''' sakey primere a clase ed urbano na [[baley]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
+Say '''Los Baños''' sakey primera klase ed urbano na [[baley]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
 
 == Listaan na Barangay ==
 
@@ -53,8 +34,10 @@ Say Los Baños walay 14 ya [[barangay]]:
 *Tadlac
 *Timugan
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
