--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -15,7 +15,7 @@
 * [[Liliw, Laguna|Liliw]]
 * [[Los Baños, Laguna|Los Baños]]
 * [[Luisiana, Laguna|Luisiana]]
-* [[Lumban, Laguna|Lumban]]
+* [[Lumban]]
 * [[Mabitac, Laguna|Mabitac]]
 * [[Magdalena, Laguna|Magdalena]]
 * [[Majayjay, Laguna|Majayjay]]
