--- a/Mabitac.mw
+++ b/Mabitac.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Mabitac<br>''Bayan ng Mabitak'' |
- sealfile     = |
- locatormapfile = Ph_locator_laguna mabitac.png |
- caption      = Map of [[Laguna]] showing the location of Mabitac. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 4th district |
- barangays    = 15 |
- class        = 5th class |
- mayor        = Gerardo C. Fader |
- founded      = [[1611]]|
- cityhood     = |
- areakm2      = 80.76 |
- pop2000      = 18,618 |
- popden2000   = 230 |
- coordinates  = 14°25′39″N 121°25′36″E |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mabitac, Laguna
@@ -32,9 +13,9 @@
 | 2030 = 		
 |}}
 
-Say '''Mabitac''' sakey 5th class na baley diad [[Filipinas|Pilipino]] ed luyag na [[Laguna]].
+Say '''Mabitac''' sakey kuma-5 klase na baley diad [[Filipinas|Pilipino]] ed luyag na [[Laguna]].
 
-== Listaan na Barangay ==
+== Listaan na barangay ==
 
 Say Mabitac walay 15 ya [[barangay]]:
 
@@ -54,7 +35,10 @@ Say Mabitac walay 15 ya [[barangay]]:
 * Santo Antônio
 * San Muigel
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
