--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -18,7 +18,7 @@
 * [[Lumban]]
 * [[Mabitac, Laguna|Mabitac]]
 * [[Magdalena, Laguna|Magdalena]]
-* [[Majayjay, Laguna|Majayjay]]
+* [[Majayjay]]
 * [[Nagcarlan, Laguna|Nagcarlan]]
 * [[Paete, Laguna|Paete]]
 * [[Pagsanjan, Laguna|Pagsanjan]]
