--- a/Majayjay.mw
+++ b/Majayjay.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Majayjay<br>''Magaygay''<br>''Mahayhay''|
- sealfile     = |
- locatormapfile = Ph_locator_laguna_majayjay.png |
- caption      = Map of [[Laguna]] showing the location of Majayjay. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 4th district of Laguna |
- barangays    = 40 |
- class        = 4th class |
- mayor        = Kevin James Santa Monica, Jr. |
- founded      = [[1725]]|
- cityhood     = -|
- areakm2      = 69.58 |
- pop2000      = 26,547 |
- popden2000   = 380 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Majayjay, Laguna
@@ -32,7 +13,7 @@
 | 2030 = 		
 |}}
 
-Say '''Majayjay''' ([[salitan Italiano|Italiano]]: ''Commune di Magaygay''; [[salitan Tagalog]]: ''Bayan ng Mahayhay''), sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
+Say '''Majayjay''' sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
 
 == Listaan na Barangay ==
 
@@ -84,8 +65,10 @@ Say Majayjay walay 40 ya [[barangay]]:
 * Villa Nogales
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
