--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -19,7 +19,7 @@
 * [[Mabitac, Laguna|Mabitac]]
 * [[Magdalena, Laguna|Magdalena]]
 * [[Majayjay]]
-* [[Nagcarlan, Laguna|Nagcarlan]]
+* [[Nagcarlan]]
 * [[Paete, Laguna|Paete]]
 * [[Pagsanjan, Laguna|Pagsanjan]]
 * [[Pakil, Laguna|Pakil]]
