--- a/Paete.mw
+++ b/Paete.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Paétê |
- sealfile     = PaeteLogo-BIG-transparent.gif|
- locatormapfile = Ph_locator_laguna paete.png |
- caption      = Map of [[Laguna]] showing the location of the Paétê. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 9 |
- class        = 4th class |
- mayor        = Emmanuel B. Cadayona |
- founded      = [[1602]]<br>Agosto 31, [[2009]]|
- cityhood     = - |
- areakm2      = 39.47 |
- pop2000      = 23,523 |
- popden2000   = 6000 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paete, Laguna
@@ -32,7 +13,7 @@
 | 2030 = 		
 |}}
 
-Say '''Paétê''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
+Say '''Paete''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
 
@@ -50,7 +31,10 @@ Saray [[barangay]] no nine:
 
 [[image:Paete Laguna.JPG|none|230px]]
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
