--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -21,7 +21,7 @@
 * [[Majayjay]]
 * [[Nagcarlan]]
 * [[Paete, Laguna|Paete]]
-* [[Pagsanjan, Laguna|Pagsanjan]]
+* [[Pagsanjan]]
 * [[Pakil, Laguna|Pakil]]
 * [[Pangil, Laguna|Pangil]]
 * [[Pila, Laguna|Pila]]
