--- a/Pagsanjan.mw
+++ b/Pagsanjan.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Pagsanjan|
- sealfile     = |
- locatormapfile = Ph_locator_laguna pagsanjan.png |
- caption      = Map of [[Laguna]] showing the location of Pagsanjan. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 16 |
- class        = 2nd class |
- mayor        = [[Maita Estregan]] |
- founded      = [[1688]] |
- cityhood     = - |
- areakm2      = - |
- pop2000      = 32,622 |
- popden2000   = -|
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pagsanjan, Laguna
@@ -36,23 +17,22 @@ Say '''Pagsanjan''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
 
-
 Saray [[barangay]] no sixteen:
 
 <table border=0><tr>
 <td valign=top>
 * Anibong
-* [[Biñán (Pagsanjan)|Biñán]]
+* Biñán
 * Buboy
-* [[Cabanbanan]]
-* [[Calusiché]]
+* Cabanbanan
+* Calusiché
 * Dingin
 * Lambac
 * Layugan
 </td><td valign=top>
 * Magdapio
-* [[Maulawin]]
-* [[Pinagsanjan]]
+* Maulawin
+* Pinagsanjan
 * Barangay I (Pob.)
 * Barangay II (Pob.)
 * Sabang
@@ -60,7 +40,10 @@ Saray [[barangay]] no sixteen:
 * San Isidro
 </td></tr></table>
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
