--- a/Pangil.mw
+++ b/Pangil.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Pangil<br />''Municipalidad del Panguil'' |
- sealfile     = |
- locatormapfile = Ph_locator_laguna pangil.png |
- caption      = Map of [[Laguna]] showing the location of Pangil. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 8 |
- class        = 4th class |
- mayor        = Juanita Callao Manzana |
- founded      = 1579 |
- cityhood     = - |
- areakm2      = 46.50 |
- pop2000      = 23,201 |
- popden2000   = 500 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pangil, Laguna
@@ -38,17 +19,19 @@ Say '''Pangil''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 Saray [[barangay]] no eight:
 
-* [[Balian]]
-* [[Dambo]]
-* [[Galalan]]
-* [[Isla (Pangil)|Isla]] (Población)
-* [[Mabato-Azufre]]
-* [[Natividad (Laguna)|Natividad]] (Población)
-* [[San José (Pangil)|San José]] (Población)
-* [[Sulib]]
+* Balian
+* Dambo
+* Galalan
+* Isla (Población)
+* Mabato-Azufre
+* Natividad (Población)
+* San José (Población)
+* Sulib
 
-{{philippines-geo-stub}}
-{{Pangil}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
