--- a/Santa_Cruz,_Laguna.mw
+++ b/Santa_Cruz,_Laguna.mw
@@ -1,22 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Bayan ng Santa Cruz, Laguna<br />Municipality of Santa Cruz, Laguna|
- sealfile     = SantaCruz Large.thumbnail.jpg |
- locatormapfile = Ph_locator_laguna_santa cruz.png |
- caption      = Map of [[Laguna]] showing the location of Santa Kruz. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna]] |
- districts    = Prime District |
- barangays    = 26 |
- class        = premier class |
- mayor        = Benjamin Agaraó, Jr. ([[2010]]-) |
- founded      = [[1602]]|
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Cruz, Laguna
@@ -31,11 +13,11 @@
 | 2030 = 		
 |}}
 
-Say '''Santa Cruz''' sakey premier class [[baley]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
+Say '''Santa Cruz''' sakey primera klase [[baley]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
 
 ==Listaan na barangay==
 
-Ti Santa Cruz ket nabingbingay a politikal iti 26 a [[barangay|barbarangay]].
+Walay 17 ya [[barangay]] ed baley na Santa Cruz.
 
 <table border=0><tr>
 <td valign=top>
@@ -68,7 +50,10 @@ Ti Santa Cruz ket nabingbingay a politikal iti 26 a [[barangay|barbarangay]].
 * Santo Angel Sur
 </td></tr></table>
 
-{{stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{Laguna}}
+{{stub}}
 
 [[Category:Saray baley na Laguna]]
