--- a/Siniloan.mw
+++ b/Siniloan.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Siniloan<br />''Bayan ng Siniluan''<br>''Bungto han Sinilu-an''<br>''Lungsod sa Sinilohan'' |
- sealfile     = |
- locatormapfile = Ph_locator_laguna siniloan.png |
- caption      = Map of [[Laguna]] showing the location of Siniloan. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 20 |
- class        = 2nd class |
- mayor        = Juanita Realeza-Acero |
- founded      = 1719 |
- cityhood     = - |
- areakm2      = 64.51 |
- pop2000      = 33,563 |
- popden2000   = 550 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Siniloan, Laguna
@@ -32,39 +13,37 @@
 | 2030 = 		
 |}}
 
-Say '''Siniloan''' ([[salitan Cebuano|Cebuano]]: Sinilohan; [[salitan Waraynon|Waraynon]]: ''Sinilu-an''), sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
+Say '''Siniloan''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
 
 Saray [[barangay]] no twenty:
 
-<table border=0><tr>
-<td valign=top>
-* [[Acevida]]
-* [[Bagong Pag-Asa (Siniloan)|Bagong Pag-Asa]] (Población)
-* [[Bagumbarangay (Siniloan)|Bagumbarangay]] (Población)
-* [[Buhay (Laguna)|Buhay]]
-* [[General Luna (Siniloan)|General Luna]]
-* [[Halayhayin (Siniloan)|Halayhayin]]
-* [[Mendiola (Laguna)|Mendiola]]
-* [[Kapatalan]]
-* [[Laguio]]
-* [[Liyang (Laguna)|Liyang]]
-</td><td valign=top>
-* [[Llavac]]
-* [[Pandeno]]
-* [[Magsaysay (Siniloan)|Magsaysay]]
-* [[Macatad]]
-* [[Mayatba]]
-* [[Padre Burgos (Siniloan)|Padre Burgos]]
-* [[G. Redor]] (Población)
-* [[Salubungan]]
-* [[Wawa (Siniloan)|Wawa]]
-* [[José Rizal (Siniloan)|José Rizal]] (Población)
-</td></tr></table>
+* Acevida
+* Bagong Pag-Asa (Poblacion)
+* Bagumbarangay (Poblacion)
+* Buhay
+* Gen. Luna
+* Halayhayin
+* Mendiola
+* Kapatalan
+* Laguio
+* Liyang
+* Llavac
+* Pandeno
+* Magsaysay
+* Macatad
+* Mayatba
+* P. Burgos
+* G. Redor (Poblacion)
+* Salubungan
+* Wawa
+* J. Rizal (Poblacion)
 
-{{philippines-geo-stub}}
-{{Siniloan}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
