--- a/Victoria,_Laguna.mw
+++ b/Victoria,_Laguna.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Victoria<br />''Commune di Vittoria''|
- sealfile     = |
- locatormapfile = Ph_locator_laguna victoria.png |
- caption      = Map of [[Cavite]] showing the location of Victoria. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 9 |
- class        = 4th class |
- mayor        = [[Nonong González]] |
- founded      = 1949 |
- cityhood     = - |
- areakm2      = - |
- pop2000      = - |
- popden2000   = -|
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Victoria, Laguna
@@ -32,10 +13,9 @@
 | 2030 = 		
 |}}
 
-Say '''Victoria''' ([[salitan Filipino|Filipino]]: ''Viktoria''; [[salitan Italiano|Italiano]]: ''Commune di Vittoria''), sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
+Say '''Victoria''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
-
 
 Saray [[barangay]] no nine:
 
@@ -49,7 +29,10 @@ Saray [[barangay]] no nine:
 * San Francisco
 * San Roque (Pob.)
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
