--- a/Cabuyao.mw
+++ b/Cabuyao.mw
@@ -1,31 +1,8 @@
-[[File:Ph_locator_laguna_cabuyao.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Cabuyao''' et kumanem ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 248,436 totoo. <br> 	
 Walay kabaleg tan sukat to ya 43.40 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4025. 			
 									
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Cabuyao<br>''Kabuyaw'' |
- sealfile     = |
- locatormapfile = Ph_locator_laguna_cabuyao.png |
- caption      = Map of [[Laguna]] showing the location of Cabuyao. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 2nd district of Laguna |
- barangays    = 18 |
- class        = premier class |
- mayor        = Isidro Lebrilla Hemedes |
- founded      = January 15, [[1571]]|
- cityhood     = [[August 4]], [[2012]] |
- areakm2      = 43.30  |
- pop2000      = 248,436 |
- popden2000   = 5700 |
- coordinates  = |
-}}
-
-[[IMAGE:Cabuyao City Infobox Pic.png|left|thumb|290px|(from top, left to right): Pamantasan ng Cabuyao, Cabuyao City Plaza, Church of Saint Polycarp, Light Industry and Science Park of the Philippines, Malayan Colleges Laguna, Cabuyao City Hall]] Say '''Cabuyao''' ([[salitan Tagalog|Tagalog]]: ''Kabuyaw''), sakey primere a clase na [[siyudad]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
-
 == Listaan na Barangay ==
 [[Image:MCL_RizalHall.jpg|right|thumb|300px|Malayan College Cabuyao]]
 Say Cabuyao walay 18 ya [[barangay]]:
@@ -53,8 +30,10 @@ Say Cabuyao walay 18 ya [[barangay]]:
 * Diezmo
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray siyudad na Filipinas]]
