--- a/Calamba.mw
+++ b/Calamba.mw
@@ -1,11 +1,10 @@
-[[File:Ph_locator_laguna_calamba.png|right|270px]] 							
+{{Infobox location}}
+					
 									
 Say '''Calamba''' et unaan ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 389,377 totoo. <br> 	
 Walay kabaleg tan sukat to ya 149.50 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4027. 			
 
-
-
-==Listaan na Barangay==
+==Listaan na barangay==
 
 Say Siyudad na Kalamba walay 54 ya [[barangay]]:
 
@@ -69,5 +68,9 @@ Say Siyudad na Kalamba walay 54 ya [[barangay]]:
 * Majada Labas
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Laguna}}
 									
 [[Category:Saray siyudad na Filipinas]]
