--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -34,7 +34,7 @@
 |list2 = 
 * [[Biñan]]
 * [[Cabuyao]]
-* [[Calamba, Laguna|Calamba]]
+* [[Calamba]]
 * [[San Pablo, Laguna|San Pablo]]
 * [[San Pedro, Laguna|San Pedro]]
 * [[Santa Rosa, Laguna|Santa Rosa]]
