--- a/San_Pablo,_Laguna.mw
+++ b/San_Pablo,_Laguna.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_laguna_san_pablo.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''San Pablo, Laguna''' et unaan ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 248,890 totoo. <br> 	
-Walay kabaleg tan sukat to ya 197.56 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4000. 			
+Walay kabaleg tan sukat to ya 197.56 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4000. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Laguna}}	
 									
 [[Category:Saray siyudad na Filipinas]]
