--- a/San_Pedro.mw
+++ b/San_Pedro.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_laguna_san_pedro.png|right|270px]] 							
-									
+{{Infobox location}}
+								
 Say '''San Pedro, Laguna''' et unaan ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 294,310 totoo. <br> 	
-Walay kabaleg tan sukat to ya 24.05 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4023. 			
+Walay kabaleg tan sukat to ya 24.05 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4023. 	
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Laguna}}	
 									
 [[Category:Saray siyudad na Filipinas]]
