--- a/Santa_Rosa,_Laguna.mw
+++ b/Santa_Rosa,_Laguna.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_laguna_santa_rosa.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Santa Rosa, Laguna''' et unaan ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 284,670 totoo. <br> 	
-Walay kabaleg tan sukat to ya 54.84 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4026. 			
+Walay kabaleg tan sukat to ya 54.84 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4026. 	
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Laguna}}	
 									
 [[Category:Saray siyudad na Filipinas]]
