--- a/Bacolod,_Lanao_del_Norte.mw
+++ b/Bacolod,_Lanao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte bacolod.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bacolod, Lanao del Norte
 | 1990 = 14637		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bacolod''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 21,818 totoo. Walay kabaleg tan sukat to ya 104.1 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9205.	
 	
-
 ==Saray barangay==
 * Alegria
 * Babalaya
@@ -32,10 +32,14 @@ Say '''Bacolod''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[P
 * Rupagan
 * Delabayan West
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
