--- a/Baloi.mw
+++ b/Baloi.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator lanao del norte baloi.png|right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baloi, Lanao del Norte
@@ -14,7 +14,6 @@
 |}}
 
 Say '''Baloi''' et kumatlo ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,387 totoo. Walay kabaleg tan sukat to ya 90.98 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9217.	
-
 
 ==Saray barangay==
 * Abaga
@@ -39,10 +38,14 @@ Say '''Baloi''' et kumatlo ya klase baley ed luyag na [[Lanao del Norte]], [[Pil
 * Sarip-Alawi (Payawan)
 * Sigayan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}															
+{{Lanao del Norte}}	
+														
 [[Category:Saray baley na Lanao del Norte]]
