--- a/Baroy.mw
+++ b/Baroy.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte baroy.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baroy, Lanao del Norte
 | 1990 = 18897		
@@ -13,7 +14,6 @@
 |}}
 Say '''Baroy''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 20,948 totoo. Walay kabaleg tan sukat to ya 72.35 sq. km. Sikato et walad 1dt ya distrito. Say zip code to et 9210.	
 	
-
 ==Saray barangay==
 * Andil
 * Bag-ong Dawis
@@ -39,10 +39,14 @@ Say '''Baroy''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pil
 * San Juan
 * Santo Niño Village
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}		
+												
 [[Category:Saray baley na Lanao del Norte]]
