--- a/Kapatagan,_Lanao_del_Norte.mw
+++ b/Kapatagan,_Lanao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte kapatagan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kapatagan, Lanao del Norte
 | 1990 = 33397		
@@ -13,7 +14,6 @@
 |}}
 Say '''Kapatagan''' et kumadwa ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 53,916 totoo. Walay kabaleg tan sukat to ya 242.89 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9214.	
 	
-
 ==Saray barangay==
 * Bagong Badian
 * Bagong Silang
@@ -50,10 +50,14 @@ Say '''Kapatagan''' et kumadwa ya klase baley ed luyag na [[Lanao del Norte]], [
 * Tulatulahan
 * Waterfalls
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
