--- a/Lala.mw
+++ b/Lala.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte lala.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lala, Lanao del Norte
 | 1990 = 22533		
@@ -13,7 +14,6 @@
 |}}
 Say '''Lala''' et unaan ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 65,355 totoo. Walay kabaleg tan sukat to ya 140.25 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9207.	
 	
-
 ==Saray barangay==
 * Abaga
 * Andil
@@ -43,10 +43,14 @@ Say '''Lala''' et unaan ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipi
 * Tenazas
 * Tuna-an
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
