--- a/Linamon.mw
+++ b/Linamon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte linamon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Linamon, Lanao del Norte
 | 1990 = 50100		
@@ -13,7 +14,6 @@
 |}}
 Say '''Linamon''' et kumalima ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 17,484 totoo. Walay kabaleg tan sukat to ya 76.38 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9211.	
 	
-
 ==Saray barangay==
 * Bosque
 * Larapan
@@ -24,10 +24,14 @@ Say '''Linamon''' et kumalima ya klase baley ed luyag na [[Lanao del Norte]], [[
 * Robocon
 * Samburon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
