--- a/Maigo.mw
+++ b/Maigo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte maigo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maigo, Lanao del Norte
 | 1990 = 8841		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maigo''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 20,131 totoo. Walay kabaleg tan sukat to ya 121.45 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9221.	
 		
-
 ==Saray barangay==
 * Balagatasa
 * Campo 1
@@ -29,10 +29,14 @@ Say '''Maigo''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pil
 * Sigapod
 * Kulasihan (Villanueva)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}													
+{{Lanao del Norte}}	
+												
 [[Category:Saray baley na Lanao del Norte]]
