--- a/Matungao.mw
+++ b/Matungao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte matungao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matungao, Lanao del Norte
 | 1990 = 14613		
@@ -13,7 +14,6 @@
 |}}
 Say '''Matungao''' et kumalima ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,217 totoo. Walay kabaleg tan sukat to ya 45.74 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9206.	
 		
-
 ==Saray barangay==
 * Bubong Radapan
 * Bangco
@@ -28,10 +28,14 @@ Say '''Matungao''' et kumalima ya klase baley ed luyag na [[Lanao del Norte]], [
 * Santa Cruz
 * Somiorang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}													
+{{Lanao del Norte}}		
+											
 [[Category:Saray baley na Lanao del Norte]]
