--- a/Munai.mw
+++ b/Munai.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte munai.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Munai, Lanao del Norte
 | 1990 = 7264		
@@ -13,7 +14,6 @@
 |}}
 Say '''Munai''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 27,600 totoo. Walay kabaleg tan sukat to ya 197.5 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9203.	
 	
-
 ==Saray barangay==
 * Bacayawan
 * Balabacun
@@ -42,10 +42,14 @@ Say '''Munai''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pil
 * Tamparan (Mandaya)
 * Taporog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}
+													
 [[Category:Saray baley na Lanao del Norte]]
