--- a/Nunungan.mw
+++ b/Nunungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte nunungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nunungan, Lanao del Norte
 | 1990 = 12006		
@@ -13,7 +14,6 @@
 |}}
 Say '''Nunungan''' et kumatlo ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 16,304 totoo. Walay kabaleg tan sukat to ya 473.28 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9219.	
 		
-
 ==Saray barangay==
 * Abaga
 * Bangco
@@ -41,10 +41,14 @@ Say '''Nunungan''' et kumatlo ya klase baley ed luyag na [[Lanao del Norte]], [[
 * Songgod
 * Taraka
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}													
+{{Lanao del Norte}}	
+												
 [[Category:Saray baley na Lanao del Norte]]
