--- a/Poona_Piagapo.mw
+++ b/Poona_Piagapo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte poona piagapo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Poona Piagapo, Lanao del Norte
 | 1990 = 10148		
@@ -13,7 +14,6 @@
 |}}
 Say '''Poona Piagapo''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 23,451 totoo. Walay kabaleg tan sukat to ya 260.07 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9218.	
 		
-
 ==Saray barangay==
 * Alowin
 * Bubong-Dinaig
@@ -42,10 +42,14 @@ Say '''Poona Piagapo''' et kumapat ya klase baley ed luyag na [[Lanao del Norte]
 * Tangclao
 * Timbangalan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}													
+{{Lanao del Norte}}	
+												
 [[Category:Saray baley na Lanao del Norte]]
