--- a/Sapad.mw
+++ b/Sapad.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte sapad.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sapad, Lanao del Norte
 | 1990 = 13576		
@@ -33,10 +34,14 @@ Say '''Sapad''' et kumalima ya klase baley ed luyag na [[Lanao del Norte]], [[Pi
 * Pili
 * Lower Sapad
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
