--- a/Tubod,_Lanao_del_Norte.mw
+++ b/Tubod,_Lanao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del norte tubod.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tubod, Lanao del Norte
 | 1990 = 36083		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tubod''' et kumadwa ya klase baley ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 46,332 totoo. Walay kabaleg tan sukat to ya 246.8 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9209.	
 	
-
 ==Saray barangay==
 * Barakanas
 * Baris (Lumangculob)
@@ -40,10 +40,14 @@ Say '''Tubod''' et kumadwa ya klase baley ed luyag na [[Lanao del Norte]], [[Pil
 * Taguranao
 * Tubaran
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Norte}}														
+{{Lanao del Norte}}	
+													
 [[Category:Saray baley na Lanao del Norte]]
