--- a/Iligan.mw
+++ b/Iligan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_lanao_del_norte_iligan.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Iligan''' et unaan ya klase siyudad ed luyag na [[Lanao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 322,821 totoo. <br> 	
-Walay kabaleg tan sukat to ya 813.37 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 9200. 			
+Walay kabaleg tan sukat to ya 813.37 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 9200. 		
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Lanao del Norte}}
 									
 [[Category:Saray siyudad na Filipinas]]
