--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -5,7 +5,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Amai Manabilang, Lanao del Sur|Amai Manabilang]]
+* [[Amai Manabilang]]
 * [[Bacolod-Kalawi, Lanao del Sur|Bacolod-Kalawi]]
 * [[Balabagan, Lanao del Sur|Balabagan]]
 * [[Balindong, Lanao del Sur|Balindong]]
