--- a/Amai_Manabilang.mw
+++ b/Amai_Manabilang.mw
@@ -1,6 +1,7 @@
-[[File:Ph locator lanao del sur bumbaran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
-| title = Sensus na populasyon ed <br> Bumbaran, Lanao del Sur
+| title = Sensus na populasyon ed <br> Amai Manabilang
 | 1990 = 4341		
 | 1995 = 6001		
 | 2000 = 6589		
@@ -11,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Bumbaran''' et kumatlo ya klase baley ed luyag na [[Lanao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 8,734 totoo. Walay kabaleg tan sukat to ya 544.1 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9320.	
+Say '''Amai Manabilang''' et kumatlo ya klase baley ed luyag na [[Lanao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 8,734 totoo. Walay kabaleg tan sukat to ya 544.1 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9320.	
 	
 ==Saray barangay==
 * Poblacion (Apartfort)
@@ -32,10 +33,14 @@ Say '''Bumbaran''' et kumatlo ya klase baley ed luyag na [[Lanao del Sur]], [[Pi
 * Sigu-an
 * Sumugot
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Sur}}														
+{{Lanao del Sur}}	
+													
 [[Category:Saray baley na Lanao del Sur]]
