--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -6,7 +6,7 @@
 |group1 = Saray baley
 |list1 = 
 * [[Amai Manabilang]]
-* [[Bacolod-Kalawi, Lanao del Sur|Bacolod-Kalawi]]
+* [[Bacolod-Kalawi]]
 * [[Balabagan, Lanao del Sur|Balabagan]]
 * [[Balindong, Lanao del Sur|Balindong]]
 * [[Bayang, Lanao del Sur|Bayang]]
