--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -11,7 +11,7 @@
 * [[Balindong, Lanao del Sur|Balindong]]
 * [[Bayang, Lanao del Sur|Bayang]]
 * [[Binidayan, Lanao del Sur|Binidayan]]
-* [[Buadiposo-Buntong, Lanao del Sur|Buadiposo-Buntong]]
+* [[Buadiposo-Buntong]]
 * [[Bubong, Lanao del Sur|Bubong]]
 * [[Butig, Lanao del Sur|Butig]]
 * [[Calanogas, Lanao del Sur|Calanogas]]
