--- a/Calanogas.mw
+++ b/Calanogas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del sur calanogas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calanogas, Lanao del Sur
 | 1990 = 7559		
@@ -32,10 +33,14 @@ Say '''Calanogas''' et kumalima ya klase baley ed luyag na [[Lanao del Sur]], [[
 * Taliboboka
 * Tambac
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Sur}}														
+{{Lanao del Sur}}	
+													
 [[Category:Saray baley na Lanao del Sur]]
