--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -15,7 +15,7 @@
 * [[Bubong, Lanao del Sur|Bubong]]
 * [[Butig, Lanao del Sur|Butig]]
 * [[Calanogas, Lanao del Sur|Calanogas]]
-* [[Ditsaan-Ramain, Lanao del Sur|Ditsaan-Ramain]]
+* [[Ditsaan-Ramain]]
 * [[Ganassi, Lanao del Sur|Ganassi]]
 * [[Kapai, Lanao del Sur|Kapai]]
 * [[Kapatagan, Lanao del Sur|Kapatagan]]
