--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -20,7 +20,7 @@
 * [[Kapai, Lanao del Sur|Kapai]]
 * [[Kapatagan, Lanao del Sur|Kapatagan]]
 * [[Lumba-Bayabao, Lanao del Sur|Lumba-Bayabao]]
-* [[Lumbaca-Unayan, Lanao del Sur|Lumbaca-Unayan]]
+* [[Lumbaca-Unayan]]
 * [[Lumbatan, Lanao del Sur|Lumbatan]]
 * [[Lumbayanague, Lanao del Sur|Lumbayanague]]
 * [[Madalum, Lanao del Sur|Madalum]]
