--- a/Template:Lanao_del_Sur.mw
+++ b/Template:Lanao_del_Sur.mw
@@ -22,7 +22,7 @@
 * [[Lumba-Bayabao, Lanao del Sur|Lumba-Bayabao]]
 * [[Lumbaca-Unayan]]
 * [[Lumbatan, Lanao del Sur|Lumbatan]]
-* [[Lumbayanague, Lanao del Sur|Lumbayanague]]
+* [[Lumbayanague]]
 * [[Madalum, Lanao del Sur|Madalum]]
 * [[Madamba, Lanao del Sur|Madamba]]
 * [[Maguing, Lanao del Sur|Maguing]]
