--- a/Sultan_Dumalondong.mw
+++ b/Sultan_Dumalondong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del sur sultan dumalondong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sultan Dumalondong, Lanao del Sur
 | 1990 =		
@@ -21,6 +22,9 @@ Say '''Sultan Dumalondong''' et kumanem ya klase baley ed luyag na [[Lanao del S
 * Malalis 
 * Pagalongan 
 * Tagoranao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
