--- a/Marawi.mw
+++ b/Marawi.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_lanao_del_sur_marawi.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Marawi''' et kumapat ya klase siyudad ed luyag na [[Lanao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 187,106 totoo. <br> 	
-Walay kabaleg tan sukat to ya 87.55 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9700. 			
+Walay kabaleg tan sukat to ya 87.55 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9700. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Lanao del Sur}}	
 									
 [[Category:Saray siyudad na Filipinas]]
