--- a/Burauen.mw
+++ b/Burauen.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte burauen.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Burauen, Leyte
 | 1990 = 46029		
@@ -92,6 +93,9 @@ Say '''Burauen''' et unaan ya klase baley ed luyag na [[Leyte]], [[Pilipinas]]. 
 * Kalipayan
 * Tambukol
 * Lusad
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray gawing ed labas ==
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
