--- a/Carigara.mw
+++ b/Carigara.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte carigara.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carigara, Leyte
 | 1990 = 38863		
@@ -63,11 +64,15 @@ Say '''Carigara''' et kumadwa ya klase baley ed luyag na [[Leyte]], [[Pilipinas]
 * Canfabi
 * Rizal (Tagak East)
 * San Isidro
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}												
+{{Leyte}}	
+											
 [[Category:Saray baley na Leyte]]
