--- a/Pastrana.mw
+++ b/Pastrana.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte pastrana.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pastrana, Leyte
 | 1990 = 12565		
@@ -43,11 +44,15 @@ Say '''Pastrana''' et kumalima ya klase baley ed luyag na [[Leyte]], [[Pilipinas
 * Tingib
 * Yapad
 * Lourdes
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}													
+{{Leyte}}	
+												
 [[Category:Saray baley na Leyte]]
