--- a/Baybay.mw
+++ b/Baybay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_leyte_baybay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Baybay''' et kumanem ya klase siyudad ed luyag na [[Leyte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 102,841 totoo. <br> 	
-Walay kabaleg tan sukat to ya 459.30 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6521. 			
+Walay kabaleg tan sukat to ya 459.30 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6521. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Leyte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
