--- a/Tacloban.mw
+++ b/Tacloban.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_leyte_tacloban.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tacloban''' et unaan ya klase siyudad ed luyag na [[Leyte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 221,174 totoo. <br> 	
-Walay kabaleg tan sukat to ya 201.72 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6500. 			
+Walay kabaleg tan sukat to ya 201.72 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6500. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Leyte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
