--- a/Template:Cavite.mw
+++ b/Template:Cavite.mw
@@ -13,7 +13,7 @@
 * [[Indang, Cavite|Indang]]
 * [[Kawit, Cavite|Kawit]]
 * [[Magallanes, Cavite|Magallanes]]
-* [[Maragondon, Cavite|Maragondon]]
+* [[Maragondon]]
 * [[Mendez, Cavite|Mendez]]
 * [[Naic, Cavite|Naic]]
 * [[Noveleta]]
