--- a/Barira.mw
+++ b/Barira.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao barira.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barira, Maguindanao
 | 1990 = 16858		
@@ -28,6 +29,9 @@ Say '''Barira''' et kumapat ya klase baley ed luyag na [[Maguindanao]], [[Pilipi
 * Rominimbang
 * Togaig
 * Minabay
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
