--- a/Datu_Anggal_Midtimbang.mw
+++ b/Datu_Anggal_Midtimbang.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Anggal Midtimbang, Maguindanao
 | 1990 =		
@@ -21,6 +22,9 @@ Say '''Datu Anggal Midtimbang''' et kumanem ya klase baley ed luyag na [[Maguind
 *Nunangan (Nunangen)
 *Tugal   
 *Tulunan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
