--- a/Datu_Unsay.mw
+++ b/Datu_Unsay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu unsay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Unsay, Maguindanao
 | 1990 = 		
@@ -22,6 +23,9 @@ Say '''Datu Unsay''' et kumalima ya klase baley ed luyag na [[Maguindanao]], [[P
 * Meta
 * Panangeti
 * Tuntungan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
