--- a/Pagalungan.mw
+++ b/Pagalungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao pagalungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pagalungan, Maguindanao
 | 1990 = 42495		
@@ -26,6 +27,9 @@ Say '''Pagalungan''' et unaan ya klase baley ed luyag na [[Maguindanao]], [[Pili
 * Linandangan
 * Poblacion
 * Dalgan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
