--- a/Pandag.mw
+++ b/Pandag.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pandag, Maguindanao
 | 1990 =		
@@ -22,6 +23,9 @@ Say '''Pandag''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[Pilipi
 * Malangit 	
 * Pandag 	
 * Upper Dilag
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
