--- a/Rajah_Buayan.mw
+++ b/Rajah_Buayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao rajah buayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rajah Buayan, Maguindanao
 | 1990 =		
@@ -25,6 +26,9 @@ Say '''Rajah Buayan''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[
 *Sampao
 *Sapakan (Pob.)
 *Tabungao
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
