--- a/Shariff_Aguak.mw
+++ b/Shariff_Aguak.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao shariff aguak.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Shariff Aguak, Maguindanao
 | 1990 = 52475		
@@ -27,6 +28,9 @@ Say '''Shariff Aguak''' et kumatlo ya klase baley ed luyag na [[Maguindanao]], [
 * Tapikan
 * Timbangan
 * Tina
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
