--- a/Sultan_Mastura.mw
+++ b/Sultan_Mastura.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator maguindanao sultan mastura.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sultan Mastura, Maguindanao
@@ -28,6 +28,9 @@ Say '''Sultan Mastura''' et kumalima ya klase baley ed luyag na [[Maguindanao]],
 *Tapayan
 *Tariken
 *Tuka
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
