--- a/Sultan_sa_Barongis.mw
+++ b/Sultan_sa_Barongis.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao sultan sa barongis.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sultan sa Barongis, Maguindanao
 | 1990 = 29916		
@@ -26,6 +27,9 @@ Say '''Sultan sa Barongis''' et kumadwa ya klase baley ed luyag na [[Maguindanao
 * Tugal
 * Tukanakuden
 * Paldong
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
