--- a/Sultan_Sumagka.mw
+++ b/Sultan_Sumagka.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao talitay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talitay, Maguindanao
 | 1990 =		
@@ -23,6 +24,9 @@ Say '''Sultan Sumagka''' et kumanem ya klase baley ed luyag na [[Maguindanao]], 
 * Manggay
 * Pageda
 * Talitay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
