--- a/Talayan.mw
+++ b/Talayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao talayan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talayan, Maguindanao
 | 1990 = 42327		
@@ -43,6 +44,9 @@ Say '''Talayan''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[Pilip
 * Timbaluan
 * Datalpandan
 * Tulunan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
