--- a/Template:Marinduque.mw
+++ b/Template:Marinduque.mw
@@ -6,7 +6,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Boac, Marinduque|Boac]]
+* [[Boac]]
 * [[Buenavista, Marinduque|Buenavista]]
 * [[Gasan, Marinduque|Gasan]]
 * [[Mogpog, Marinduque|Mogpog]]
