--- a/Mogpog.mw
+++ b/Mogpog.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator marinduque mogpog.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mogpog, Marinduque
@@ -53,6 +53,9 @@ Say '''Mogpog''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilipin
 * Sumangga
 * Tarug
 * Villa Mendez (Poblacion)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
