--- a/Template:Marinduque.mw
+++ b/Template:Marinduque.mw
@@ -9,7 +9,7 @@
 * [[Boac]]
 * [[Buenavista, Marinduque|Buenavista]]
 * [[Gasan, Marinduque|Gasan]]
-* [[Mogpog, Marinduque|Mogpog]]
+* [[Mogpog]]
 * [[Santa Cruz, Marinduque|Santa Cruz]]
 * [[Torrijos, Marinduque|Torrijos]]
 }}<noinclude>
