--- a/Torrijos.mw
+++ b/Torrijos.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator marinduque torrijos.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Torrijos, Marinduque
@@ -40,6 +40,9 @@ Say '''Torrijos''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilip
 * Suha
 * Talawan
 * Tigwi
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
